--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,7 +158,7 @@ section{
 .btn-box{
     display: flex;
     justify-content:space-between;
-    width: 320px;
+    width: 266px;
     height: 45px;
 }
 .btn-box a.btn{
@@ -283,7 +283,7 @@ a.btn:nth-child(2)::before{
 .liquid-shape:nth-child(2){
     filter:blur(3px)
 }
-/*About Seection css*/
+/*About Seection css-----------------------------------*/
 .about{
     display:flex;
     justify-content:center;
@@ -354,6 +354,305 @@ about-content p{
    font-weight: 600;
 }
 
+/*service section css-----------------*/
+.main-text{
+    width:100%;
+    text-align: center;
+    margin-bottom: 2rem;
+    color:var(--hover-color);
+}
+
+.main-text h2{
+    font-weight: 700;
+    font-size: var(--norma-font);
+}
+
+.main-text span{
+    color:#f5f5f5;
+    font-size: .8rem;
+    font-weight: 200;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.section-services{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-wrap: wrap;
+    grid-gap: 2rem;
+}
+
+.section-services .service-box{
+    flex: 1 1 18rem;
+    padding: 2rem 1rem 2rem;
+    text-align: center;
+    background: var(--secon-bg-color);
+    transition: transform .4s;
+    border-radius: 10px;
+}
+
+.service-btn{
+    width:auto;
+    justify-content: center;
+
+}
+
+.service-box:hover{
+    transform: translateY(-.7rem);
+}
+
+.service-icon{
+    border:2px soild var(--hover-color);
+    padding: 2rem;
+    background: var(--bg-color);
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+    border-radius: 50%;
+    position: relative;
+    color: var(--hover-color);
+    box-shadow: var(--neon-box-shadow);
+    outline: 3px soild var(--bg-color);
+
+}
+
+.service-box h3{
+    margin-top:10px;
+    font-size:1.5rem;
+}
+
+.service-box p{
+    margin:.5rem 0 1.5rem 0;
+    font-weight:300;
+    letter-spacing:1px;
+    color:#bdbdbd;
+    line-height:1.6;
+}
+
+/*skill section css-----------------*/
+
+.skills{
+    background-color: var(--secon-bg-color);
+
+}
+
+.skill-main{
+    width:100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 50px;
+}
+
+.skill-bar{
+   margin-bottom: 1.0rem; 
+}
+
+.skill-main h3{
+    margin-bottom: 2rem;
+    font-size: var(--norma-font);
+    text-align: center;
+}
+
+.skill-left .skill-bar .info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.skill-left .skill-bar .bar{
+    width: 100%;
+    height: 10px;
+    background-color: var(--bg-color);
+    border-radius: 25px;
+    margin-top: 10px;
+    position: relative;
+}
+
+.skill-bar .bar span{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    background: var(--hover-color);
+    border-radius: 25px;
+    
+}
+
+.skill-bar .bar .html{
+    width: 90%;
+    animation: html 2s;
+}
+.skill-bar .bar .css{
+    width: 80%;
+    animation: css 3s;
+}
+.skill-bar .bar .javascript{
+    width: 80%;
+    animation: javascript 4s;
+}
+.skill-bar .bar .java{
+    width: 80%;
+    animation: java 5s;
+}
+.skill-bar .bar .php{
+    width: 60%;
+    animation: php 6s;
+}
+.skill-bar .bar .python{
+    width: 60%;
+    animation: python 7s;
+}
+.skill-bar .bar .flutter{
+    width: 75%;
+    animation:flutter 8s;
+}
+.skill-bar .bar .react{
+    width: 70%;
+    animation: react 9s;
+}
+.skill-bar .bar .figma{
+    width: 80%;
+    animation: figma 10s;
+}
+/*skill right--------*/
+.professional{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.box{
+    position: relative;
+    margin: 10px 0;
+    flex: 1 1 15rem;
+}
+.box .text{
+    text-align:center;
+    color: #fff;
+    font-size: 1rem;
+}
+.box .text big{
+    font: 400;
+    letter-spacing: 1px;
+    position:absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+}
+.box .text small{
+    display: block;
+    font-weight: 600;
+}
+.circle{
+   width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.circle .points{
+    width: 2px;
+    height:10px;
+    background-color: var(--bg-color);
+    position: absolute;
+    border-radius: 3px;
+    transform: rotate(calc(var(--i)*var(--rot))) translateY(-45px);
+   
+}
+.points.marked{
+    animation: glow 0.04s linear forwards;
+    animation-delay: calc(var(--i)*0.05s);
+}
+
+/*portfolio section-----------------*/
+.fillter-buttons{
+    margin: 2rem;
+    text-align: center;
+
+}
+.fillter-buttons .btn{
+   background: none;
+   outline: none;
+   border: none;
+   cursor: pointer;
+   font-size: .85rem;
+   letter-spacing: .4px;
+   margin-left: 1.3rem;
+   color: var(--text-color);
+
+}
+
+.fillter-buttons .btn:hover{
+    color: var(--hover-color);
+
+}
+.portfolio-gallery{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    gap:2rem;
+}
+
+.port-box{
+    position: relative;
+    border-radius: 15px;
+    overflow: hidden;
+    background: #292e33;
+    display: flex;
+    grid-template-rows: 1fr auto;
+    align-items: center;
+    border: 2px solid var(--hover-color);
+    box-shadow: var(--neon-box-shadow);
+}
+
+.port-image{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+/*----------------------------------------------------------------------------------*/
+.port-image img{
+    width: 100%;
+    opacity: .5s;
+    height: 100%;
+    transition: .5s;
+}
+
+.port-content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   /* opacity: 0;*/
+    background: linear-gradient(rgba(0,0,0,.2),#12f7ff);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    transition: 0.5s;
+    padding: 0 2rem;
+
+}
+
+.port-content h3{
+    font-size:1.5rem ;
+    font-weight: 600;
+}
+
+.port-content p{
+    font-size: .8rem;
+    margin: 5px 0 15px 0;
+}
+
+
+
+
+
 
 
 
@@ -372,5 +671,97 @@ about-content p{
     }
     80%{
         border-radius: 69% 31% 34% / 21% 30% 70% 79%;
+    }
+}
+
+@keyframes html{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 90%;
+    }
+}
+
+@keyframes css{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes javascript{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes java{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes php{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 60%;
+    }
+}
+
+@keyframes python{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 60%;
+    }
+}
+
+@keyframes flutter{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 75%;
+    }
+}
+
+@keyframes react{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 70%;
+    }
+}
+
+@keyframes figma{
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 80%;
+    }
+}
+
+@keyframes glow{
+    0%{
+        background: var(--bg-color);
+        box-shadow: none;
+    }
+    100%{
+        background: var(--hover-color);
+        box-shadow:var(--neon-box-shadow) ;
     }
 }
