--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,20 @@
 
 }
 
+::-webkit-scrollbar{
+    height: 0;
+    width: .5rem;
+}
+
+::-webkit-scrollbar-tract{
+    background: var(--secon-bg-color);
+}
+
+::-webkit-scrollbar-thumb{
+    background: var(--hover-color);
+    border-radius: 5rem;
+}
+
 body{
     font-family:"Poppins",sans-serif ;
     background-color: var(--bg-color);
@@ -38,11 +52,22 @@ body{
 
 }
 header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    border-bottom: 1px solid transparent;
     display:flex ;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     padding:20px 10% ;
+}
+
+header.sticky{
+    background: var(--bg-color);
+    border-bottom: 1px solid var(--secon-bg-color);
+    padding: 12px 10%;
 }
 
 .logo{
@@ -59,9 +84,13 @@ span{
     display: flex;
 }
 .navlist a{
+    display: inline-block;
    color: var(--text-color); 
    font-weight: 500;
    padding: 10px 20px;
+   animation: slideAnimation 1s ease forwards;
+   animation-delay: calc(.3s * var(--i));
+   opacity: 0;
 }
 
 .navlist a:hover{
@@ -74,6 +103,10 @@ span{
     0 0 80px rgba(18,247,255,0.6),
     0 0 100px rgba(18,247,255,0.6),
     0 0 150px rgba(18,247,255,0.6); 
+}
+
+.navlist a.active{
+    color: var(--hover-color);
 }
 
 #menu-icon{
@@ -158,10 +191,10 @@ section{
 .btn-box{
     display: flex;
     justify-content:space-between;
-    width: 266px;
+    width: 320px;
     height: 45px;
 }
-.btn-box a.btn{
+.btn-box .btn{
     display:inline-flex;
     justify-content: center;
     align-items: center;
@@ -178,12 +211,13 @@ section{
     position: relative;
     overflow: hidden;
     z-index: 1;
+    border: 2px solid var(--hover-color);
    
 }
-a.btn:hover{
+.btn:hover{
     color: var(--hover-color);
 }
-a.btn::before{
+.btn::before{
     content: "";
     position: absolute;
     top: 0;
@@ -194,17 +228,17 @@ a.btn::before{
     z-index: -1;
     transition: .4s;
 }
-a.btn:hover::before{
+.btn:hover::before{
     width: 100%;
 }
-a.btn:nth-child(2){
+.btn:nth-child(2){
     background: var(--bg-color);
     color: var(--hover-color);
 }
-a.btn:nth-child(2):hover{
+.btn:nth-child(2):hover{
     color: var(--bg-color);
 }
-a.btn:nth-child(2)::before{
+.btn:nth-child(2)::before{
     background: var(--hover-color);
 
 }
@@ -317,7 +351,7 @@ a.btn:nth-child(2)::before{
     font-size:1.5rem;
     margin-bottom: 0.2rem;
 }
-about-content p{
+.about-content p{
     color:#fdfdfd;
     font-weight: 1.5rem;
     margin-bottom: 1.5rem;
@@ -502,7 +536,7 @@ about-content p{
     animation: php 6s;
 }
 .skill-bar .bar .python{
-    width: 60%;
+    width: 50%;
     animation: python 7s;
 }
 .skill-bar .bar .flutter{
@@ -510,7 +544,7 @@ about-content p{
     animation:flutter 8s;
 }
 .skill-bar .bar .react{
-    width: 70%;
+    width: 65%;
     animation: react 9s;
 }
 .skill-bar .bar .figma{
@@ -566,25 +600,26 @@ about-content p{
     animation-delay: calc(var(--i)*0.05s);
 }
 
-/*portfolio section-----------------*/
+/*project section-----------------*/
 .fillter-buttons{
     margin: 2rem;
     text-align: center;
 
 }
-.fillter-buttons .btn{
+.fillter-buttons .button{
    background: none;
    outline: none;
    border: none;
    cursor: pointer;
    font-size: .85rem;
+   font-weight: 600;
    letter-spacing: .4px;
    margin-left: 1.3rem;
    color: var(--text-color);
 
 }
 
-.fillter-buttons .btn:hover{
+.fillter-buttons .button:hover{
     color: var(--hover-color);
 
 }
@@ -613,7 +648,7 @@ about-content p{
     height: 100%;
     width: 100%;
 }
-/*----------------------------------------------------------------------------------*/
+
 .port-image img{
     width: 100%;
     opacity: .5s;
@@ -627,7 +662,7 @@ about-content p{
     left: 0;
     width: 100%;
     height: 100%;
-   /* opacity: 0;*/
+    opacity: 0;
     background: linear-gradient(rgba(0,0,0,.2),#12f7ff);
     display: flex;
     align-items: center;
@@ -635,8 +670,15 @@ about-content p{
     flex-direction: column;
     text-align: center;
     transition: 0.5s;
-    padding: 0 2rem;
+    padding: 0 rem;
 
+}
+
+.port-box:hover .port-content{
+    opacity: 1;
+}
+.port-box:hover .port-image img{
+    transform: scale(1.1);
 }
 
 .port-content h3{
@@ -649,11 +691,120 @@ about-content p{
     margin: 5px 0 15px 0;
 }
 
+.port-content a{
+    background: #fff;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border: 1px solid var(--hover-color);
+    outline: 2px solid #fff;
+}
+.port-content a i{
+    font-size:1.3rem ;
+    color: var(--secon-bg-color);
+}
+
+/*Contact section--------------------*/
+.contact{
+    background: var(--secon-bg-color);
+    width: 100%;
+}
+.contact form{
+    text-align: center;
+    max-width: 50rem;
+    margin: 1rem auto;
+    margin-bottom: 3rem;
+}
+
+.contact form input,
+.contact form textarea{
+    width: 100%;
+    color: var(--text-color);
+    background: var(--bg-color);
+    margin-bottom: .8rem;
+    border: none;
+    border-radius: 5px;
+    padding: .7rem;
+}
+
+.contact form textarea{
+    resize: none;
+}
+
+.formBtn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.formBtn .btn{
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+/*parallax*/
+.scroll-scale {
+    opacity: 0;
+    transform: scale(.9);
+    transition: all 2s;
+}
+
+.scroll-bottom {
+    opacity: 0;
+    transform: translateY(300px);
+    transition: 3s;
+}
+
+.scroll-top {
+    opacity: 0;
+    transform: translateY(-300px);
+    transition: 3s;
+}
+
+.show-items {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 1s, transform 1s;
+}
 
 
 
 
 
+
+
+
+
+/*footer section--------------------*/
+footer{
+    padding: 1.5rem 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--bg-color);
+
+}
+
+footer p{
+    color: #bdbdbd;
+}
+
+footer a{
+    display: inline-flex;
+    justify-content: center;
+    color: var(--text-color);
+    background: var(--hover-color);
+    padding: .6rem;
+    border-radius: 5px;
+}
+
+footer a i{
+    font-size: 1rem;
+    color: var(--secon-bg-color);
+}
 
 
 
@@ -764,4 +915,142 @@ about-content p{
         background: var(--hover-color);
         box-shadow:var(--neon-box-shadow) ;
     }
+
 }
+
+@keyframes slideAnimation{
+    0%{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/*break point*/
+@media(max-width:991px){
+    header,
+    header.sticky{
+        padding:15px 5%;
+    }
+
+    footer{
+        padding: 15px 5%;
+    }
+
+    section{
+        padding: 50px 5%;
+    }
+    .navlist a{
+        padding: 8px 15px;
+    }
+
+    :root{
+        --big-font:2.2rem;
+        --norma-font:1.8rem;
+        --neon-box-shadow:0 0.8rem #12f7ff;
+        --h2-font:3rem;
+    }
+
+    .home-content{
+        margin-top: 5rem;
+    }
+
+    .social-icons{
+        margin-top: 2rem;
+    }
+}
+
+@media(max-width:768px){
+    #menu-icon {
+        display: block;
+        transition: all .4s ease;
+    }
+
+    #menu-icon.bx-x {
+        transform: rotate(-180deg);
+    }
+
+    .navlist{
+        display: flex;
+        position: absolute;
+        top:-1000px;
+        right: 0;
+        left: 0;
+        flex-direction: column;
+        background: var(--bg-color);
+        text-align: left;
+        padding: 0 5%;
+        transition: all .4s ease;
+    }
+
+    .navlist a{
+        display: block;
+        padding-bottom: 1rem;
+        font-size: 1rem;
+    }
+
+    .navlist.open{
+        top: 100%;
+    }
+
+    .home{
+        grid-template-columns: 1fr;
+    }
+
+    .home-image{
+        margin-bottom: 5rem;
+    }
+
+    .liquid-shape{
+        width: 80%;
+        left: 10%;
+        top: 13%;
+    }
+
+    .about{
+        flex-direction: column-reverse;
+    }
+
+    .skill-main{
+        grid-template-columns: 1fr;
+    }
+
+    .fillter-buttons{
+        margin: 2.5rem 0;
+    }
+
+    footer p{
+        font-size: .8rem;
+    }
+}
+
+@media(max-width:420px){
+    html{
+        font-size:80% ;
+    }
+
+    footer p{
+        font-size: .6rem;
+    }
+
+    .fillter-buttons .button{
+        font-size: .8rem;
+    }
+
+    .img-about img{
+        width: 300px;
+    }
+
+    .info-about1{
+        display:none;
+    }
+
+    .img-about p{
+        font-size: 1rem;
+    }
+
+}
+
